test/cases/compile_errors/empty_char_lit.zig
export fn entry() u8 {
    return '';
}

// error
//
// :2:12: error: empty character literal
